--- a/src/client/app/core/toolbar/toolbar.component.html
+++ b/src/client/app/core/toolbar/toolbar.component.html
@@ -12,6 +12,9 @@
       <a mat-button [routerLink]="['/villains']" routerLinkActive="router-link-active">
         <span>Villains</span>
       </a>
+      <a mat-button [routerLink]="['/alerts']" routerLinkActive="router-link-active">
+        <span>Alerts</span>
+      </a>
     </div>
   </mat-toolbar-row>
   <mat-toolbar-row class="row-commands">
