--- a/src/client/app/alerts/alert-detail/alert-detail.component.html
+++ b/src/client/app/alerts/alert-detail/alert-detail.component.html
@@ -12,7 +12,7 @@
         </div>
         <div>
           <mat-form-field>
-            <input matInput formControlName="symbol" placeholder="symbol" #symbol
+            <input matInput formControlName="name" placeholder="name" #symbol
               (keyup.esc)="close()" (keyup.enter)="saveAlert()">
           </mat-form-field>
         </div>
